# OpenAgent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: refactor_no_behavior_change.md
.github/workflows/: release.yml
OpenAgent/: Cargo.toml
OpenAgent/src/: gate.rs  main.rs  tools.rs
OpenAgent/src/providers/: mod.rs  ollama.rs  openai_compat.rs
OpenAgent/src/trust/: audit.rs  policy.rs
docs/: CLI_REFERENCE.md  CODEX_EXECUTION_RULES.md  CODEX_HANDOFF_PR3_PR4_AND_REMAINING_WORK.md  INSTALL.md  LEARN_OUTPUT_CONTRACT.md  LEARN_RESEARCH_BRIEF.md  LEARN_WORKFLOW_REFERENCE.md  LLM_SETUP.md  PR4_SCOPE_LEARN_PROMOTE_PACK_AND_AGENTS.md  PR7B_SCOPE_TUI_LEARN_OVERLAY_REVIEW_PROMOTE.md  PR7D_SCOPE_GUIDED_CAPTURE_AND_EVAL_PROOF.md  PR7_SCOPE_TUI_LEARN_OVERLAY_UX.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  TEMPLATES.md
docs/reference/: CLI_REFERENCE.md  LEARN_WORKFLOW_REFERENCE.md
docs/release-notes/: README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md
scripts/: run-localagent.ps1
src/: agent.rs  agent_budget.rs  agent_runtime.rs  agent_tool_exec.rs  agent_utils.rs  approvals_ops.rs  chat_commands.rs  chat_repl_runtime.rs  chat_tui_learn_adapter.rs  chat_tui_runtime.rs  chat_ui.rs  cli_args.rs  cli_dispatch.rs  cli_dispatch_learn.rs  compaction.rs  diagnostics.rs  events.rs  gate.rs  learning.rs  lib.rs  main.rs  main_tests.rs  operator_queue.rs  ops_helpers.rs  packs.rs  planner.rs  provider_runtime.rs  reliability_profile.rs  repro.rs  run_prep.rs  runtime_flags.rs  runtime_paths.rs  scaffold.rs  session.rs  startup_bootstrap.rs  store.rs  task_apply.rs  taskgraph.rs  tasks_graph_runtime.rs  tools.rs  (+1 more)
src/eval/: assert.rs  baseline.rs  bundle.rs  metrics.rs  mod.rs  profile.rs  report.rs  runner.rs  tasks.rs  types.rs
src/hooks/: config.rs  protocol.rs  runner.rs
src/mcp/: client.rs  registry.rs  types.rs
src/providers/: common.rs  http.rs  mod.rs  ollama.rs  openai_compat.rs
src/store/: hash.rs  io.rs  render.rs  types.rs
src/trust/: approvals.rs  audit.rs  mod.rs  policy.rs  policy_test.rs
src/tui/: input.rs  learn_adapter.rs  mod.rs  render.rs  state.rs
tests/: artifact_golden.rs  diagnostics.rs  hooks_runner.rs  mcp_impl_regression.rs  mcp_integration.rs
(+1 files in other folders)
