[package]
name = "localagent"
version = "0.2.1"
edition = "2021"
default-run = "localagent"
repository = "https://github.com/CalvinSturm/LocalAgent"
license = "MIT"
readme = "README.md"
keywords = ["agent", "cli", "llm", "tool-calling", "localagent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "localagent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time", "signal"] }
globset = "0.4"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
diffy = "0.4"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
ratatui = "0.29"
crossterm = "0.28"
ulid = "1"

[dev-dependencies]
tempfile = "3"
