[package]
name = "agentloop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
globset = "0.4"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
diffy = "0.4"

[dev-dependencies]
tempfile = "3"
